--- a/style.css
+++ b/style.css
@@ -15,15 +15,13 @@ a:hover {
     color: black;
     background-color: rgb(181, 181, 181);
     border: 3px black solid;
-    width: 200px;
-    
+    border-width:auto;
 }
 
 .description {
     color: black;
     background-color: white;
     border: 2px black solid;
-    width: 500px;
     text-align: center;
 }
 
